force-app/main/default/objects/College__c/fields/College_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>College_Start_Date__c</fullName>
    <label>College Start Date</label>
    <type>Date</type>
</CustomField>