force-app/main/default/objects/College__c/fields/Courses_Offered__c.field-meta.xml
<CustomField>
    <fullName>Courses_Offered__c</fullName>
    <label>Courses Offered</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>CIVIL</fullName>
                <default>true</default>
                <label>CIVIL</label>
            </value>
            <value>
                <fullName>CSE</fullName>
            </value>
            <value>
                <fullName>ECE</fullName>
            </value>
            <value>
                <fullName>EEE</fullName>
            </value>
            <value>
                <fullName>IT</fullName>
            </value>
            <value>
                <fullName>MECH</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>