force-app/main/default/objects/College__c/fields/University_Name__c.field-meta.xml
<CustomField>
    <fullName>University_Name__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>University Name</label>
    <referenceTo>University__c</referenceTo>
    <relationshipLabel>Colleges</relationshipLabel>
    <relationshipName>Colleges</relationshipName>
    <type>Lookup</type>
</CustomField>