force-app/main/default/objects/College__c/recordTypes/Autonumous.recordType-meta.xml
<RecordType>
    <fullName>Autonumous</fullName>
    <active>true</active>
    <label>Autonumous</label>
</RecordType>