force-app/main/default/objects/College__c/recordTypes/University_Affiliated.recordType-meta.xml
<RecordType>
    <fullName>University_Affiliated</fullName>
    <active>true</active>
    <label>University Affiliated</label>
</RecordType>